[package]
name = "asynqmon"
version = "0.1.0"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description = "Asynq task control panel with Actix-web backend and Dioxus UI - supports web interface"

[[bin]]
name = "asynqmon"
path = "src/main.rs"

[dependencies]
# Core dependencies
asynq = { version = "0.1.2", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# UI framework - Dioxus web
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = { version = "0.6" }

# Web server - Actix-web
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-actix-web = "0.7"

# Time handling
chrono = { version = "0.4", features = ["serde"], default-features = false }
