[package]
name = "members"
version = "0.1.0"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description = "Asynq task control panel with Dioxus UI - supports web interface"

[[bin]]
name = "members"
path = "src/main.rs"

[dependencies]
# Core dependencies
asynq = { path = "../asynq", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# UI framework - Dioxus web
dioxus = { version = "0.6" }

# Web server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time handling
chrono = { version = "0.4", features = ["serde"], default-features = false }
